--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -6,3 +6,12 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<form action="/Index" method="post">
+    <label for="fname"> First name: </label>
+    <input type="text" name="fname" value="" />
+
+
+
+    <button type ="submit"> Post </button>
+</form>
