--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,8 +2,8 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    int counter = 0;
 }
-
 <!-- Page Content-->
 <div class="container-fluid p-0">
     <!-- About-->
@@ -12,28 +12,41 @@
             <h1 class="mb-0">
                 Isac
                 <span class="text-primary">Hellström</span>
+                <img src="~/Images/gamer.png" width="200" height="200" />
             </h1>
             <div class="subheading mb-5">
                 Stockholm · Sweden, · 0790548925 ·
                 <a href="mailto:isachells92@hotmail.com">isachells92@hotmail.com</a>
             </div>
             <p class="lead mb-5">
+
                 Passionate student and connoisseur of all things code. With a special spot in my
                 heart for simulations and database development.
                 Willing to put time and effort into learning new things with an open mind and
                 all my creativity. I want to be involved in developing the future. Exciting times.
             </p>
             <div class="social-icons">
-                <a class="social-icon" href="https://www.linkedin.com/in/isac-hellstr%C3%B6m-310a39185/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="social-icon" href="https://resume.io/r/mQdooqIvO" target="_blank"><i class="fas fa-portrait"></i></a>
+                <a class="social-icon" href="https://www.linkedin.com/in/isac-hellstr%C3%B6m-310a39185/" target="_blank"><i class="fab fa-linkedin-in"></i> </a>
                 <a class="social-icon" href="https://github.com/xSolutionist" target="_blank"><i class="fab fa-github"></i></a>
                 <a class="social-icon" href="https://twitter.com/IsacHellstrom" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a class="social-icon" href="https://www.facebook.com/Dentle.deturgence.ltd" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a class="social-icon" href="https://resume.io/r/mQdooqIvO" target="_blank"><i class="fas fa-portrait"></i></a>
+            </div>
+            <div>
+                <img src="/Images/business-person.png" height="50" width="50" />
+                <a href="https://resume.io/r/mQdooqIvO">CV</a>
+                <img src="/Images/boy.png" height="50" width="50" />
+                <a href="https://www.linkedin.com/in/isac-hellstr%C3%B6m-310a39185/">LinkedIn</a>
+                <img src="/Images/nerd.png" height="50" width="50" />
+                <a href="https://github.com/xSolutionist">GitHub</a>
+                <img src="/Images/conversation.png" height="50" width="50" />
+                <a href="https://twitter.com/IsacHellstrom">Twitter</a>
+                <img src="/Images/talking.png" height="50" width="50" />
+                <a href="https://www.facebook.com/Dentle.deturgence.ltd">Facebook</a>
             </div>
         </div>
     </section>
-    <hr class="m-0" />
-
+ 
     <!-- Portfolio Modal 1-->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
@@ -60,7 +73,7 @@
                                 </video>
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">
-                                    Second hand e-commerce webbshop. <br />
+                                    Second hand e-commerce webbshop build with .NET Core. <br />
                                     This video displays functions such as cart-functions, catalog, search-functions, cookie handling, admin page and privacy-policies.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
@@ -77,19 +90,16 @@
     <!-- Experience-->
     <section class="resume-section" id="experience">
         <div class="resume-section-content">
-            <h2 class="mb-5"></h2>
+            <h2 class="mb-2"></h2>
             <!-- Portfolio Section-->
             <section class="resume-section" id="portfolio">
                 <div class="resume-section-content">
                     <!-- Portfolio Section Heading-->
-                    <h2 class="mb-5">Portfolio</h2>
-                    @*<h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>*@
-                    <!-- Icon Divider-->
-                    <div class="divider-custom text-center">
-                        <div class="divider-custom-line"></div>
-                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                        <div class="divider-custom-line"></div>
+                    <div class="text-center">
+                        <h2 class="mb-5">Portfolio</h2>
+                        <hr />
                     </div>
+                    <!-- Icon Divider-->
                     <!-- Portfolio Grid Items-->
                     <div class="row justify-content-center">
                         <!-- Portfolio Item 1-->
@@ -99,7 +109,8 @@
                                     <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <div class="plussign">
-                                    <center><h4 class="img-fluid">E-Commerce</h4></center>
+                                    <center><h4 class="img-fluid">E-Commerce</h4> <p>Click to play</p></center>
+                                    <center> <img src="~/Images/play.png" width="100" height="100" /> </center>
                                     <img class="img-fluid" src="~/Images/Ecommerce.jpg" alt="E-Commerce" />
                                 </div>
                             </div>
@@ -109,9 +120,13 @@
             </section>
         </div>
     </section>
-    <hr class="m-0" />
 
-    <center> <p class="border-bottom-0 font-weight-bolder"> I-Sequence: Gps, Qr and system-development </p></center>
+    <div class="text-center">
+        <h4 class="mb-5"> Data storage</h4>
+        <img src="~/Images/database.png" height="100" width="100" />
+        <img src="~/Images/dna.png" height="100" width="100" />
+    </div>
+    <center> <p class="border-bottom-0 font-weight-bolder"> I-Sequence: Gps, Qr, Db in .NET Core </p></center>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -133,12 +148,41 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <center> <p style="" class="border-top"> Application targeted to a niche number of biologists, it's purpose: <br /> To quicken the process of E-dna gathering </p></center>
+    <center> <p style="" class="border-bottom"> Application to swiftly gather and store specific e-dna data from specific animals/locations </p></center>
 
+    <div class="text-center">
+        <h4 class="mb-5"> Weather Data</h4>
+        <img src="~/Images/cloudy.png" height="100" width="100" />
+        <img src="~/Images/weather.png" height="100" width="100" />
+    </div>
+    <div id="WeatherControlls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/Images/Sverigevädret1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Images/Sverigevädret3.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/Images/Sverigevädret 2.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#WeatherControlls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#WeatherControlls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <center> <p style="" class="border-bottom"> WeatherAPI:weatherbit.io - JokesAPI:sv443.net - storage: MongoDB </p></center>
     <!-- Education-->
     <section class="resume-section" id="education">
         <div class="resume-section-content">
-            <h2 class="mb-5">Education</h2>
+            <div class="text-center">
+                <h2 class="mb-5">Education</h2>
+            </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">IT-Högskolan Stockholm</h3>
@@ -160,11 +204,12 @@
             </div>
         </div>
     </section>
-    <hr class="m-0" />
     <!-- Skills-->
     <section class="resume-section" id="skills">
         <div class="resume-section-content">
-            <h2 class="mb-5">Skills</h2>
+            <div class="text-center">
+                <h2 class="mb-5">Skills</h2>
+            </div>
             <div class="subheading mb-3">Programming Languages & Tools</div>
             <ul class="list-inline dev-icons">
 
@@ -184,7 +229,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Database-First, Clean Code Principles, Responsive Design
+                    Code-First, Clean Code Principles, Responsive Design
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -201,82 +246,80 @@
             </ul>
         </div>
     </section>
-    <hr class="m-0" />
     <!-- Interests-->
-    <section class="resume-section" id="interests">
-        <div class="resume-section-content">
-            <h2 class="mb-5">Interests</h2>
-            <p>Apart from being a web developer, I enjoy most of my time either being outdoors in nature, or playing games and music in my studio. In the winter, I am an avid skier when i get the chance. During the warmer months here in stockhom, I enjoy spending time in the sun with my friends.</p>
-            <p class="mb-0">During weekends, I follow a number of sci-fi and fantasy genre movies and television shows. I love cooking for my partner or my friends and family. I spend a large amount of my free time exploring the latest technology advancements in all fields.</p>
-        </div>
-    </section>
-    <hr class="m-0" />
-
-    <!-- Awards-->
-    <section class="resume-section" id="awards">
-        <div class="resume-section-content">
-            <h2 class="mb-5">Awards & Certifications</h2>
-            <ul class="fa-ul mb-0">
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    1
-                    <sup>st</sup>
-                    Place - ITHS-Stockholm - Hackathon 2019
-                </li>
-            </ul>
-        </div>
-    </section>
-    <!-- Contact Section Form-->
-    <!-- Contact Section-->
-    <section class="page-section" id="contact">
-        <div class="container">
-            <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-            <!-- Icon Divider-->
-            <div class="divider-custom">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-
-        </div>
-    </section>
-    <div class="row">
-        <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                        <label>Name</label>
-                        <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                        <p class="help-block text-danger"></p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                        <label>Email Address</label>
-                        <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                        <p class="help-block text-danger"></p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                        <label>Phone Number</label>
-                        <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                        <p class="help-block text-danger"></p>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                        <label>Message</label>
-                        <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                        <p class="help-block text-danger"></p>
-                    </div>
-                </div>
-                <br />
-                <div id="success"></div>
-                <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-            </form>
-        </div>
+    <div class="text-center">
+        <h2 class="mb-5">Interests and Blog</h2>
     </div>
+    @*<div id="interests"> </div>
+    @foreach (var item in Model.Blogs)
+    {
+
+
+        if (counter % 2 == 0)
+        {
+
+            <div class="how-section1">
+
+                <div class="row">
+                    <div class="col-md-6 how-img">
+                        <img src="@item.Image" class="rounded-circle img-fluid" alt="" />
+                    </div>
+                    <div class="col-md-6">
+                        <h4>@item.Heading</h4>
+                        <h4 class="subheading">@item.SubHeading</h4>
+                        <p class="text-muted">
+                            @item.Article
+                        </p>
+                    </div>
+                </div>
+            </div>
+            counter++;
+        }
+
+        else
+        {
+            <div class="how-section1">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>@item.Heading</h4>
+                        <h4 class="subheading">@item.SubHeading</h4>
+                        <p class="text-muted">
+                            @item.Article
+                        </p>
+                    </div>
+                    <div class="col-md-6 how-img">
+                        <img src="@item.Image" class="rounded-circle img-fluid" alt="" />
+                    </div>
+                </div>
+            </div>
+            counter++;
+
+        }
+
+    }
+</div>*@
+
+<hr class="m-0" />
+
+<!-- Awards-->
+<section class="resume-section" id="awards">
+    <div class="resume-section-content">
+        <div class="text-center"> 
+        <h2 class="mb-5">Awards & Certifications</h2>
+            </div>
+        <ul class="fa-ul mb-0">
+            <li>
+                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                1
+                <sup>st</sup>
+                Place - ITHS-Stockholm - Hackathon 2019 <br /> Snake game, made accessable for the visually impaired.
+            </li>
+        </ul>
+    </div>
+</section>
+
+<div class="text-center">
+    <p> Shoutout to flaticon for amazing icons </p>
 </div>
+
+
